RESOLVED FIXED292650
REGRESSION (294151@main): [ MacOS iOS Wk2 ] http/tests/iframe-monitor/throttler.html is a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=292650
Summary REGRESSION (294151@main): [ MacOS iOS Wk2 ] http/tests/iframe-monitor/thrott...
Jay Stfleur
Reported 2025-05-06 19:30:54 PDT
Description: http/tests/iframe-monitor/throttler.html Test regressed on changes introduced in 294151@main and started consistently failing after 294217@main Buildbot URL: https://build.webkit.org/#/builders/1228/builds/1351 History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fiframe-monitor%2Fthrottler.html Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-Sequoia-Debug-WK2-Tests/build/layout-test-results/http/tests/iframe-monitor/throttler-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Debug-WK2-Tests/build/layout-test-results/http/tests/iframe-monitor/throttler-actual.txt @@ -1,22 +1,9 @@ -CONSOLE MESSAGE: Frame was unloaded because its network usage exceeded the limit: 10240 bytes, url=http://localhost:8080/iframe-monitor/resources/--eligible--/iframe.html -CONSOLE MESSAGE: Frame was unloaded because its network usage exceeded the limit: 10240 bytes, url=http://localhost:8080/iframe-monitor/resources/--eligible--/iframe.html -CONSOLE MESSAGE: Frame was unloaded because its network usage exceeded the limit: 10240 bytes, url=http://localhost:8080/iframe-monitor/resources/--eligible--/iframe.html -CONSOLE MESSAGE: Frame was unloaded because its network usage exceeded the limit: 10240 bytes, url=http://localhost:8080/iframe-monitor/resources/--eligible--/iframe.html -CONSOLE MESSAGE: Frame was unloaded because its network usage exceeded the limit: 10240 bytes, url=http://localhost:8080/iframe-monitor/resources/--eligible--/iframe.html CONSOLE MESSAGE: Frame's network usage exceeded the limit. +FAIL: Timed out waiting for notifyDone to be called + Test throttler prevents unloaded. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS document.querySelector('iframe[name=frame1]').srcdoc is not "" -PASS document.querySelector('iframe[name=frame2]').srcdoc is not "" -PASS document.querySelector('iframe[name=frame3]').srcdoc is not "" -PASS document.querySelector('iframe[name=frame4]').srcdoc is not "" -PASS document.querySelector('iframe[name=frame5]').srcdoc is not "" -PASS result is true -PASS document.querySelector('iframe[name=frame6]').srcdoc is "" -PASS successfullyParsed is true -TEST COMPLETE -
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-06 19:31:44 PDT
EWS
Comment 2 2025-05-06 19:40:07 PDT
Test gardening commit 294593@main (c7e472cace79): <https://commits.webkit.org/294593@main> Reviewed commits have been landed. Closing PR #45043 and removing active labels.
Basuke Suzuki
Comment 3 2025-05-12 10:46:58 PDT
EWS
Comment 4 2025-05-12 15:10:40 PDT
Committed 294807@main (476ff0a8d21e): <https://commits.webkit.org/294807@main> Reviewed commits have been landed. Closing PR #45257 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.