REGRESSION (294151@main): [  MacOS iOS Wk2 ] http/tests/iframe-monitor/throttler.html is a consistent timeout https://bugs.webkit.org/show_bug.cgi?id=292650 rdar://150816150

Reviewed by Chris Dumez.

Fix test failures caused by incomplete throttler data cleanup between tests.

The throttler persistence was fixed in 294151@main, which exposed a regression
where throttler data wasn't being properly cleared between tests. This
caused the throttler to incorrectly restrict unloading in subsequent tests,
leading to test failures.

Fixed by ensuring all throttler data is cleared between tests.

* Source/WebCore/loader/ResourceMonitorThrottler.cpp:
(WebCore::ResourceMonitorThrottler::clearAllData):
* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::resetResourceMonitorThrottlerForTesting):
* Source/WebKit/NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::clearResourceMonitorThrottlerData):
(WebKit::NetworkSession::resetResourceMonitorThrottlerForTesting): Deleted.
* Source/WebKit/NetworkProcess/NetworkSession.h:

Canonical link: https://commits.webkit.org/294807@main